--- a/config/crd/bases/ingress.example.com_apps.yaml
+++ b/config/crd/bases/ingress.example.com_apps.yaml
@@ -1,10 +1,9 @@
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.7.0
+    controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
   name: apps.ingress.example.com
 spec:
@@ -43,6 +42,12 @@ spec:
             type: object
           status:
             description: AppStatus defines the observed state of App
+            properties:
+              name:
+                description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
+                  of cluster Important: Run "make" to regenerate code after modifying
+                  this file'
+                type: string
             type: object
         type: object
     served: true
